tests/baselines/reference/unusedTypeParameterInMethod4.errors.txt
tests/cases/compiler/unusedTypeParameterInMethod4.ts(3,15): error TS6133: 'X' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInMethod4.ts (1 errors) ====
    
    class A {
        public f1<X>() {
                  ~
!!! error TS6133: 'X' is declared but never used.
    
        }
    }